# indexer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
app/services/: embedding_service.py  git_service.py  graph_service.py  parser_service.py  repository_indexer.py  search_service.py
data/: repo_graph.db
original/: __init__.py  construct_graph.py  graph_searcher.py  utils.py
prisma/: schema.prisma
prisma/migrations/20251002074652_initial/: migration.sql
tests/: test_app.py
